# prova

./: .claudeignore  .env.example  .gitignore  OverviewDoc  Procfile  claude.md  middleware.ts  next.config.mjs  next.config.ts  package.json  render.yaml  tailwind.config.js  test_verify.sh
Prova/: Procfile  __init__.py  dashboard-page.tsx  layout.tsx  pyproject.toml  railway.toml
Prova/analysis/: analyzer.py  graph_builder.py
Prova/api/: errors.py  main.py
Prova/app/: global.css  page.tsx
Prova/app/certificate/[id]/: certificate-guide-page.tsx
Prova/certificate/: generator.py  versioning.py
Prova/components/: CopyButton.tsx  VerdictBadge.tsx
Prova/docs/: docs-api-reference.tsx
Prova/docs/certificate-guide/: page.tsx
Prova/docs/integrations/: page.tsx
Prova/docs/privacy/: page.tsx
Prova/storage/: client.py  pdf.py
Prova/tests/: test_analysis.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: DashboardClient.tsx  page.tsx
app/docs/: layout.tsx  page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/signup/: page.tsx
components/: ArgumentGraph.tsx  AutoRepairButton.tsx  DisclaimerBlock.tsx  ReasoningDiff.tsx  RepairSuggestions.tsx  VerdictBadge.tsx
lib/: api.ts  database.types.ts  supabase.ts
migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_indexes.sql  004_demo_key.sql  005_certificates_select_own.sql  005_repair_suggestions_and_tier.sql  006_add_repair_suggestions_and_user_tier.sql
prova/: __init__.py  cli.py  package.json  requirements.txt
prova/analysis/: repair.py
prova/api/: auth.py  main.py  models.py
prova/app/: not-found.tsx
prova/certificate/: generator.py
prova/extraction/: extractor.py  prompt_v1.txt  (+1 more)
scripts/: test_extraction.py
tests/: test_certificate_registry.py  test_extraction.py
(+18 files in other folders)
