[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prova-validator"
version = "1.0.0"
description = "Formally verified reasoning validator for AI — certificates of logical validity backed by 2,400+ Lean 4 theorems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kian Quinlan", email = "kian@cobound.dev"}]
keywords = [
    "reasoning", "verification", "formal-methods", "AI-safety",
    "logic", "certificate", "compliance", "EU-AI-Act",
    "cobound", "cohomology", "lean4"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cobound-validator>=0.1.0",
    "anthropic>=0.25.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "supabase>=2.4.0",
    "sentry-sdk[fastapi]>=1.43.0",
    "reportlab>=4.1.0",
    "pydantic>=2.6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
prova = "prova.cli:main"

[project.urls]
Homepage = "https://prova.cobound.dev"
Repository = "https://github.com/insinuateai/prova"
Documentation = "https://prova.cobound.dev/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
